--- a/frontend/content/articles/10.mdx
+++ b/frontend/content/articles/10.mdx
@@ -4,186 +4,61 @@ image: "/Insights/Articles/10.svg"
 category: "Career Development"
 ---
 
-# Tech Job Market: Navigating the Highs & Lows
+<div style={{ display: 'flex', justifyContent: 'center' }}>
+  <img src="/Insights/Articles/10.1.jpeg" alt="Tech Job Market: Navigating the Highs & Lows" style={{ maxWidth: '100%', height: 'auto' }} />
+</div>
+<br />
 
-The technology sector is known for its volatility—rapid growth periods followed by sudden downturns. Understanding these cycles and developing strategies to navigate them is crucial for both job seekers and employers in the tech industry. This comprehensive guide explores how to thrive in both booming and challenging market conditions.
+The COVID-19 pandemic brought unprecedented challenges to various industries, with the IT sector of 5 million strong employees being no exception. Tech hiring is no more a straight forward job, often causing companies to invest more than three months in finalizing a single position.
 
-## Understanding Tech Market Cycles
+With this newsletter, we try to delve deeply into its complexities of tech talent.
+<br />
 
-### The Boom Phase
-- **Characteristics**: High demand, low unemployment, competitive salaries
-- **Duration**: Typically 2-5 years of rapid growth
-- **Indicators**: IPO activity, venture capital investment, talent shortages
-- **Challenges**: Intense competition, high turnover, burnout risk
+**The Great Resignation during COVID Period**<br />
+The outbreak of COVID-19 forced businesses worldwide to adapt to remote work and rethink their strategies. The IT industry, being at the forefront of digital transformation, witnessed a surge in demand for technology solutions and services. While some companies struggled to cope, others thrived and sought to expand their teams. This demand created an opportunity for IT professionals to explore better job prospects and take advantage of the situation.
 
-### The Bust Phase
-- **Characteristics**: Reduced hiring, increased unemployment, budget cuts
-- **Duration**: 6-18 months of contraction
-- **Indicators**: Layoffs, funding difficulties, market corrections
-- **Challenges**: Job security concerns, reduced opportunities, skill gaps
+Many employees in the IT sector felt the need to upgrade their career prospects and sought new job opportunities. Factors such as dissatisfaction with current job roles, limited growth prospects, or the desire for better work-life balance fueled the resignation wave, leading to 21% attrition rate in 2021. Companies with a strong remote work culture and attractive benefits packages attracted a large number of talented professionals. This was further fueled by start-ups flushed with funds.
+<br />
 
-### Current Market Context (2024)
-- **Post-Pandemic Recovery**: Continued growth in cloud, AI, and cybersecurity
-- **Economic Uncertainty**: Inflation and interest rate impacts
-- **Geopolitical Factors**: Global events affecting tech supply chains
-- **Talent Dynamics**: Skills shortages in critical areas
+**Lucrative Offers for Professionals with lesser Experience**<br />
+Surprisingly, the wave of resignations extended to even those with relatively less experience in the industry. Companies hungry for fresh talent and willing to invest in their growth offered enticing job packages to entry-level professionals. The demand for skilled workers was so high that these individuals were presented with job offers with salary hikes of up to 300% compared to their previous positions.
 
-## Strategies for Job Seekers
+This sudden boost in salary packages for individuals with limited experience caused a ripple effect throughout the industry. The competition for hiring talent intensified, with companies eager to attract the best candidates.
+<br />
 
-### During Boom Periods
+**Looming Economic Slowdown and Layoffs**<br />
+The euphoria of the job market was short-lived as the global economy grappled with the challenges posed by the pandemic. The economic slowdown led to shrinking revenues for many companies, forcing them to re-evaluate their budgets and cut costs. Consequently, starting in 2022, organizations resorted to employee layoffs. This included start-ups due to funding winter, big tech firms and also some companies completely shutting down operations. 
 
-#### Maximize Opportunities
-- **Skill Development**: Focus on high-demand technologies (AI, cloud, cybersecurity)
-- **Networking**: Build connections during plentiful job fairs and events
-- **Multiple Offers**: Leverage competition to negotiate better packages
-- **Employer Research**: Target companies with strong fundamentals
+More than 40,000 tech employees were affected in India by this layoff in 2022 and the first half of 2023. Companies had to prioritize cost-cutting measures to stay afloat, leading to the difficult decision of letting go of newly hired, higher-paid employees.
+<br />
 
-#### Career Advancement
-- **Internal Mobility**: Look for growth opportunities within current organizations
-- **Skill Expansion**: Learn adjacent technologies to increase marketability
-- **Personal Branding**: Build online presence and thought leadership
-- **Financial Planning**: Save during high-earning periods
+**Challenges for Professionals with inflated salary package**<br />
+As the job market retracted, professionals who earlier accepted substantial salary hikes are faced with the challenge of finding new job opportunities that match their previous earnings. With many companies now offering lower salary brackets to new hires, these individuals struggle to secure positions that provide a similar level of remuneration.
 
-### During Bust Periods
+The dilemma for these professionals is either to accept lower-paying jobs or stay unemployed while waiting for suitable opportunities.
+<br />
 
-#### Survival Strategies
-- **Skill Deepening**: Focus on mastering core competencies
-- **Cost Management**: Reduce expenses and build emergency funds
-- **Networking Maintenance**: Stay connected with professional communities
-- **Continuous Learning**: Use downtime for skill enhancement
+**Difficulty for Companies in Finding the Right Talent**<br />
+Simultaneously, companies that are hiring, find themselves grappling with a unique set of challenges. 
 
-#### Positioning for Recovery
-- **Market Research**: Identify emerging technologies and trends
-- **Portfolio Development**: Create projects demonstrating capabilities
-- **Freelance Work**: Build experience and income through consulting
-- **Company Stability**: Target organizations with strong balance sheets
+The job market is flooded with talent, but candidates' salary expectations often exceed the company's lowered budget range. This has created a misalignment between what companies are willing to pay and what prospective employees are expecting, leading to difficulties in finding the right fit for open positions. 
 
-## Strategies for Employers
+The changing market dynamics is further exacerbated by demand for new technologies like next-gen software development, cloud computing, machine learning and applied & generative AI. Fast changing technology landscape is keeping organizations on their toes to stay relevant.
 
-### During Boom Periods
+Offer shopping has become a common phenomena and companies are often left in lurch when candidates accept offers and do not join. 
+<br />
 
-#### Talent Acquisition
-- **Competitive Packages**: Offer comprehensive compensation and benefits
-- **Rapid Hiring**: Streamline processes to secure top talent quickly
-- **Employer Branding**: Highlight company culture and growth opportunities
-- **Diverse Sourcing**: Cast wide nets to find qualified candidates
+**How to navigate the labyrinth of IT hiring?**<br />
+# ***Employer Branding:*** As per a Linkedin report, 75% candidates check employer brand on online platforms before applying for a job. Building a positive employer brand requires effort but has an immense impact in terms of reduced cost-per-hire, higher offer-to-join ratio, lower turnover ratio.
+<br />
 
-#### Retention Focus
-- **Career Development**: Provide clear growth paths and learning opportunities
-- **Work-Life Balance**: Support flexible arrangements and well-being
-- **Recognition Programs**: Reward contributions and achievements
-- **Stay Interviews**: Proactively address potential turnover
+# ***Effective sourcing & screening:*** This is the most time consuming process and if done right, half the battle won. 
+<br />
 
-### During Bust Periods
+# ***Technology to the rescue:*** Technology plays a pivotal role in hiring. Right from resume parsing till cultural fitment assessments, organizations using technology have better results. Merito’s Offer-Vault is one such tool to make sure that a candidate joins after accepting the offer.
+<br />
 
-#### Cost Management
-- **Hiring Freezes**: Implement temporary moratoriums on new positions
-- **Internal Redeployment**: Reassign talent to high-priority projects
-- **Reduced Hours**: Offer temporary pay cuts or furloughs instead of layoffs
-- **Severance Planning**: Prepare fair separation packages when necessary
+Merito helps people-first companies with all three solutions mentioned above. Hit us up if you’d like to know more.
+<br /><br />
 
-#### Talent Development
-- **Upskilling Programs**: Invest in employee development during slower periods
-- **Knowledge Sharing**: Encourage internal mentoring and cross-training
-- **Innovation Time**: Allow exploration of new ideas and technologies
-- **Alumni Networks**: Maintain relationships with former employees
-
-## Key Technologies to Watch
-
-### High-Growth Areas
-- **Artificial Intelligence/Machine Learning**: Continued explosive growth
-- **Cloud Computing**: Migration and optimization services
-- **Cybersecurity**: Increasing importance of digital protection
-- **Data Science & Analytics**: Demand for insights and decision-making
-- **DevOps & SRE**: Infrastructure automation and reliability
-
-### Emerging Technologies
-- **Web3/Blockchain**: Decentralized applications and digital assets
-- **Quantum Computing**: Solving complex computational problems
-- **Edge Computing**: Processing data closer to sources
-- **Internet of Things (IoT)**: Connected devices and smart systems
-
-## Geographic Considerations
-
-### Global Tech Hubs
-- **Silicon Valley**: Innovation center but high competition
-- **Seattle**: Cloud and enterprise software focus
-- **Austin**: Growing hub with diverse opportunities
-- **New York**: Fintech and media technology
-- **London**: European tech and fintech center
-
-### Emerging Markets
-- **India**: Rapid growth in IT services and startups
-- **Eastern Europe**: Cost-effective engineering talent
-- **Southeast Asia**: Mobile and gaming technology
-- **Latin America**: Emerging startup ecosystems
-
-## Skills and Career Development
-
-### Essential Skills for 2024
-- **Technical Proficiency**: Deep expertise in core technologies
-- **Soft Skills**: Communication, leadership, and adaptability
-- **Business Acumen**: Understanding of business impact and ROI
-- **Continuous Learning**: Commitment to staying current with trends
-
-### Career Transition Strategies
-- **Lateral Moves**: Switch between similar roles for growth
-- **Vertical Advancement**: Seek leadership and management positions
-- **Specialization**: Deep dive into niche areas of expertise
-- **Entrepreneurship**: Consider starting ventures during boom periods
-
-## Economic Indicators to Monitor
-
-### Leading Indicators
-- **Venture Capital Investment**: Funding levels for startups
-- **IPO Activity**: Public offerings of tech companies
-- **Hiring Trends**: Job postings and time-to-fill metrics
-- **Layoff Announcements**: Company restructuring activities
-
-### Lagging Indicators
-- **Unemployment Rates**: Tech sector jobless numbers
-- **Salary Trends**: Compensation changes over time
-- **Stock Performance**: Tech company market valuations
-- **M&A Activity**: Mergers and acquisitions in the sector
-
-## Risk Management
-
-### Personal Financial Planning
-- **Emergency Funds**: 6-12 months of expenses saved
-- **Diversified Income**: Multiple revenue streams when possible
-- **Insurance Coverage**: Health, disability, and professional liability
-- **Retirement Planning**: Long-term financial security
-
-### Career Risk Mitigation
-- **Skill Diversification**: Avoid over-specialization in volatile areas
-- **Network Building**: Strong professional connections for opportunities
-- **Market Awareness**: Stay informed about industry trends
-- **Continuous Adaptation**: Willingness to learn and pivot
-
-## Future Outlook
-
-### Long-term Trends
-- **AI Integration**: Pervasive use across all tech domains
-- **Remote Work Normalization**: Continued flexible work arrangements
-- **Sustainability Focus**: Green technology and ESG considerations
-- **Demographic Shifts**: Aging workforce and new talent pools
-
-### Preparing for Uncertainty
-- **Scenario Planning**: Develop strategies for different market conditions
-- **Agile Mindset**: Embrace change and adaptability
-- **Resilience Building**: Develop mental and emotional strength
-- **Community Support**: Build networks for mutual assistance
-
-## Conclusion
-
-Navigating the highs and lows of the tech job market requires awareness, adaptability, and strategic planning. Whether you're a job seeker or employer, understanding market cycles and preparing accordingly can make the difference between thriving and struggling.
-
-During boom periods, focus on maximizing opportunities and building reserves. During bust periods, invest in skills, maintain networks, and position for recovery. The key is to view market volatility not as a threat, but as an opportunity for growth and strategic advantage.
-
-The most successful individuals and organizations in tech are those that maintain long-term perspectives, continuously adapt to changing conditions, and invest in their people and capabilities regardless of market conditions. By staying informed, building resilience, and maintaining strategic flexibility, you can not only survive but thrive in the dynamic tech job market.
-
-Remember, every market cycle brings new opportunities. The key is to stay prepared, keep learning, and maintain the relationships and skills that will serve you well regardless of economic conditions.
-
----
-
-*Need guidance navigating the tech job market? Contact Merito for career coaching and market intelligence.*
+<hr style={{ border: '1.5px solid #333', margin: '5px 0' }} />
