--- a/frontend/content/articles/2.mdx
+++ b/frontend/content/articles/2.mdx
@@ -4,177 +4,146 @@ image: "/Insights/Articles/2.webp"
 category: "Career Development"
 ---
 
-# Crafting a Shortlist-worthy CV
+***Recruiter:*** Good morning, Ashish! This is Sara from Merito and I came across your CV for the role of Sales Head that's I'm hiring for. I hope I'm not catching you at a bad time.
+<br />
 
-In today's competitive job market, your CV is often your first and sometimes only chance to make a strong impression on potential employers. A well-crafted CV can be the difference between getting shortlisted and being overlooked. This comprehensive guide will walk you through the essential elements of creating a CV that captures attention and demonstrates your value.
+***Candidate:*** Hi Sara. No, it's fine. How can I help you?
+<br />
 
-## Understanding the Purpose of a CV
+***Recruiter:*** Ashish, I must say, your experience and skills are quite impressive. However, I couldn't help but notice that there aren't many quantifiable achievements or numbers mentioned.
+<br />
 
-A CV is more than just a document listing your work experience and education. It's a marketing tool that showcases your skills, achievements, and potential. The goal is to convince recruiters that you're the right candidate for the role.
+***Candidate:*** Oh, I see. Yeah, I've always believed that the qualitative aspects of my work speak louder than numbers.
+<br />
 
-### Key Objectives:
-- Highlight relevant skills and experience
-- Demonstrate achievements with quantifiable results
-- Show career progression and growth
-- Align your background with the job requirements
+***Recruiter:*** I completely get where you're coming from, Ashish. And I agree, qualitative aspects are crucial, but let me give you a different perspective. In the role of a Sales Head, numbers are like the heartbeat of your achievements. They not only showcase your successes but also provide tangible evidence of your capabilities.
+<br />
 
-## Essential CV Structure
+***Candidate:*** Hmm, I hadn't thought of it that way.
+<br />
 
-### 1. Contact Information
-Keep it professional and complete:
-- Full name (prominent)
-- Phone number
-- Professional email address
-- LinkedIn profile (optional)
-- Location (city and state)
+***Recruiter:*** Think about it, Ashish. When we're looking for a Sales Head, we're not just interested in knowing that you've managed a team or closed deals. We want to see the impact you've had. How much revenue did you generate? What was the percentage increase in sales under your leadership? These numbers help us gauge your effectiveness and potential contributions to our organization.
+<br />
 
-### 2. Professional Summary
-This 3-5 sentence section should:
-- Grab attention immediately
-- Highlight your key strengths
-- Connect your experience to the target role
-- Include relevant keywords from the job description
+***Candidate:*** I suppose you're right. Numbers do provide a clearer picture of one's accomplishments.
+<br />
 
-### 3. Skills Section
-- List 8-12 key skills
-- Include both hard and soft skills
-- Use keywords from the job posting
-- Consider adding proficiency levels
+***Recruiter:*** Exactly. It's not just about boasting figures; it's about demonstrating your ability to drive results and make a significant impact. By quantifying your achievements, you're not only making your resume more compelling but also giving yourself a competitive edge in the job market.
+<br />
 
-### 4. Professional Experience
-The most critical section:
-- Use reverse chronological order
-- Include company name, job title, and dates
-- Start each bullet with strong action verbs
-- Focus on achievements, not just responsibilities
-- Quantify results where possible
+***Candidate:*** Alright, Sara. You've made a compelling argument. I'll make sure to update my resume with quantifiable achievements and send it over to you as soon as possible.
+<br />
 
-### 5. Education
-- Include degree, institution, and graduation date
-- Add relevant coursework or projects
-- Mention honors, awards, or high GPA
-- Keep it concise unless you're a recent graduate
+***Recruiter:*** That's great to hear, Ashish! I'm confident that with your experience and now with quantifiable data to back it up, you'll be an even stronger candidate. Looking forward to seeing the updated resume. Thank you for your cooperation.
+<br />
 
-## Best Practices for Content
+***Candidate:*** Thank you for your guidance, Sara. I'll speak to you soon.
+<br/>
+--
 
-### Use Action Verbs
-Start bullet points with powerful verbs:
-- Achieved, Improved, Increased, Reduced
-- Led, Managed, Coordinated, Directed
-- Developed, Created, Designed, Implemented
-- Analyzed, Researched, Evaluated, Assessed
+<br />
 
-### Quantify Achievements
-Instead of: "Responsible for social media marketing"
-Use: "Increased social media engagement by 150% and grew follower base from 5K to 25K in 12 months"
+We’ve had this conversation many times with the candidates and still do almost on a daily basis. There are hundreds of resources available online, both paid and free, on how to craft a compelling CV; and yet many of us miss the point.  
+<br />
 
-### Tailor to Each Application
-- Customize your CV for each job application
-- Incorporate keywords from the job description
-- Highlight most relevant experience first
-- Adjust professional summary to match the role
+This newsletter is one for the candidates, who are looking for a change. We are not going to get into the details of why having a well-crafted CV is crucial for standing out from the crowd and securing that dream job. What we’re going to do instead is tell you how CVs get shortlisted. 
+<br />
 
-## Design and Formatting Tips
+Recruiters have a vast pool of data - be it their internal data or any portals. Their first job is to select a few candidates from each of these sources to make the process more manageable for themselves. And to select the right candidates, they use filters.
+<br />
 
-### Keep it Clean and Professional
-- Use a clean, readable font (Arial, Calibri, or Times New Roman)
-- Maintain consistent formatting throughout
-- Use bullet points for easy scanning
-- Keep it to 1-2 pages for most professionals
+**Filter One: Keywords**<br />
+Each Job Description (JD) comes with a lot of keywords around what the candidate is supposed to do and what she’s supposed to have done to be qualified for the job. Recruiters pick keywords from the JDs and from their discussions with the hiring managers. These keywords help them filter the right candidates. Each ATS and job portal has filtering options to assist recruiters.
+<br />
 
-### Strategic Use of White Space
-- Don't cram information
-- Use adequate margins (0.5-1 inch)
-- Separate sections clearly
-- Consider using subtle borders or lines
+**Filter Two: Experience**<br />
+Experience can have multiple filters such as number of years of experience, previous companies, job titles, team handling, the skills you’ve acquired & impact you’ve created in the past. Each of these help filter out candidates which may not be relevant for the job. You do not have much control over here as some companies have specific requirement for years of experience and previous companies worked for.
+<br />
 
-## Common Mistakes to Avoid
+**Filter Three: Academics**<br /> 
+Despite the increasing emphasis on skills and experience in the hiring process, many companies still adhere to the practice of filtering out candidates based on the colleges they attended. While it's widely acknowledged that skills and competencies are far more indicative of an individual's potential contribution to a role, the prestige associated with certain institutions continues to hold sway in the corporate world.
+<br />
 
-### Overly Generic Content
-- Avoid vague statements like "Good communication skills"
-- Don't use generic templates without customization
-- Steer clear of irrelevant personal information
+You don’t need to beat yourself up for the criterion out of your control; however you can still gain a competitive edge by using the right keywords, correct verbs and impactful numbers. Here’s how you do it-
+<br />
 
-### Formatting Errors
-- Inconsistent date formats
-- Typos and grammatical errors
-- Using unprofessional email addresses
-- Including outdated or irrelevant information
+**Key Elements of a Successful CV**<br />
+A successful CV contains several key elements that allow it to effectively showcase your qualifications. These include a clear structure, concise information, and a focus on relevant skills and experiences. A well-organised CV allows employers to easily navigate through the document and quickly identify your suitability for the position.
+<br />
 
-### Length Issues
-- Don't make it too long (aim for 1 page if possible)
-- Don't leave it too short (show depth of experience)
-- Balance comprehensiveness with conciseness
+**Personal Information and Contact Details**<br />
+The first section of your CV should include your personal information and contact details. This should include your full name, contact number, email address, and professional social media profiles, if relevant. Ensure that this information is clear and easily accessible, allowing potential employers to contact you without any hassle.
+<br />
+When providing your contact details, it's important to consider the impression you want to make. Choose a professional email address that consists of your name rather than a nickname or a casual handle. Additionally, include a link to your LinkedIn profile if you have one, as it can provide employers with a more comprehensive view of your professional background.
+<br />
 
-## Industry-Specific Considerations
 
-### Technology Sector
-- Highlight technical skills prominently
-- Include GitHub repositories or portfolio links
-- Mention specific programming languages and frameworks
-- Showcase project work and contributions
+**Summary**<br />
+It is crucial to include a professional summary or objective statement at the beginning of your CV. This section provides a brief overview of your career goals, skills, and qualifications, capturing the attention of the employer and enticing them to read further. Keep the summary crisp. Nobody wants to read a one page long summary. They will just jump to experience section. 
+<br />
 
-### Creative Fields
-- Include portfolio links or samples
-- Highlight creative achievements
-- Mention tools and software proficiency
-- Demonstrate unique approaches to problem-solving
 
-### Academic/Research Roles
-- Emphasize publications and research experience
-- Include teaching experience and student evaluations
-- Highlight grants, awards, and conference presentations
-- Mention methodological expertise
+**Work Experience and Skills**<br />
+The work experience and skills section of your CV should detail your relevant work history and highlight the skills you have acquired throughout your career. List your previous job positions, with the latest one at the top, including the company names, job titles, years of employment, and key responsibilities.
+<br />
 
-## Optimizing for Applicant Tracking Systems (ATS)
+When describing your work experience, go beyond simply listing your job responsibilities. Emphasize any achievements or accomplishments that demonstrate your capabilities. Use the XYZ framework to emphasize on the outcome of your job.
+<br />
 
-### Keyword Integration
-- Research job description keywords
-- Incorporate them naturally throughout your CV
-- Use industry-specific terminology
-- Include both singular and plural forms
+Provide specific examples of projects you have worked on, challenges you have overcome, and results you have achieved. This will give potential employers a better understanding of your capabilities and the value you can bring to their organization.
+<br />
 
-### Format Compatibility
-- Use standard fonts and formatting
-- Avoid complex graphics or tables
-- Save as PDF to preserve formatting
-- Test your CV through ATS simulation tools
+Highlight any skills that are relevant to the job you are applying for. This may include technical skills, soft skills, or specific industry certifications. Be sure to provide examples of how you have applied these skills in previous roles, showcasing your ability to contribute to the potential employer's organization.
+<br />
 
-## Final Review and Proofreading
+**Education and Qualifications**<br />
+This should list your academic achievements, including the institutions you attended, the degrees or certifications you obtained, and any relevant coursework or research projects. Highlight any honors or awards you received during your academic journey.
+<br />
+When listing your educational background, consider including additional details that can help you stand out. For example, mention any extracurricular activities or leadership roles you held during your time in school/college. These experiences can demonstrate your ability to manage responsibilities, work in teams, and take initiative.
+<br />
+Remember, the goal of your CV is to present a comprehensive picture of your qualifications and experiences. By including detailed information about your personal information, education, qualifications, work experience, and skills, you can create a CV that stands out and captures the attention of potential employers.
+<br />
 
-### Self-Review Checklist
-- Is the content relevant to the target role?
-- Are there any typos or grammatical errors?
-- Does it highlight achievements over responsibilities?
-- Is the formatting consistent and professional?
+**Enhancing Your CV: Expert Tips**<br />
+Now that you have a solid foundation, let's explore some expert tips for enhancing your CV even further. These tips will help you stand out from the competition and make a lasting impression on potential employers.
+<br />
+When it comes to crafting a standout CV, there are several strategies you can employ to make it more compelling and tailored to the job you are applying for. Let's delve into some of these strategies in detail:
+<br />
 
-### Get Feedback
-- Ask mentors or colleagues for review
-- Consider professional CV writing services
-- Use online CV review platforms
-- Test readability with fresh eyes
 
-## Tools and Resources
+# ***Tailoring Your CV to the Job***
+One of the most crucial aspects of CV writing is tailoring it to the specific job you are applying for. Take the time to analyze the job description and understand the skills and qualifications sought by the employer. Then, adapt your CV to highlight your most relevant experiences, skills, and achievements that align with the job requirements. This customization shows employers that you have taken the initiative to understand their needs and are the perfect fit for the role.
+<br />
+For example, if you are applying for a marketing position, emphasize your experience in developing successful marketing campaigns, analyzing market trends, and utilizing various digital marketing tools. By aligning your CV with the specific requirements of the job, you increase your chances of catching the attention of potential employers.
+<br />
 
-### Online CV Builders
-- LinkedIn CV builder
-- Canva CV templates
-- Resume.com
-- Novoresume
+# ***Using Action Verbs and Power Words***
+An often overlooked aspect of CV writing is the use of action verbs and power words. Rather than passive language, such as "responsible for" or "involved in," opt for strong action verbs that convey your accomplishments and impact. Words like "achieved," "implemented," and "led" highlight your proactive approach and leave a lasting impression on potential employers.
+<br />
+For example, instead of saying "responsible for managing a team," you can say "led a team of 10 professionals, resulting in a 20% increase in productivity." This not only showcases your leadership skills but also quantifies your achievements, making them more impactful and memorable.
+<br />
+By incorporating these expert tips into your CV, you can elevate it to the next level and increase your chances of securing your dream job. Remember, a well-crafted and tailored CV is your ticket to standing out in a competitive job market and making a positive impression on potential employers.
+<br />
 
-### CV Optimization Tools
-- Jobscan (ATS compatibility checker)
-- ResumeWorded (feedback platform)
-- Hemingway (readability checker)
+**Common CV Mistakes to Avoid**
+<br />
+Let's discuss some common CV mistakes to avoid, as these can significantly impact your chances of success.
+<br />
 
-## Conclusion
+# ***Spelling and Grammar Errors***<br />
+Spelling and grammar errors are a red flag to potential employers, signalling a lack of attention to detail. Ensure that you thoroughly proofread your CV and, if possible, have someone else review it for you. This extra step will help you catch any mistakes and present a polished CV.
+<br />
 
-A shortlist-worthy CV is a strategic document that effectively communicates your value proposition to employers. By focusing on achievements, tailoring content to specific roles, and maintaining professional presentation, you significantly increase your chances of getting noticed and shortlisted.
+# ***Inconsistent Formatting***<br />
+Consistency is essential when it comes to formatting your CV. Ensure that font styles, sizes, and formatting are consistent throughout the document. Inconsistencies can make your CV appear unprofessional and distract the reader from focusing on the competition.
+<br />
 
-Remember, your CV is an evolving document. Regularly update it with new achievements, skills, and experiences. Treat it as a reflection of your professional brand and invest time in making it exceptional.
+# ***Including Irrelevant Information***<br />
+it is vital to include information that is relevant to the job you are applying for. Avoid including irrelevant experiences, hobbies, or personal information that does not contribute to your qualifications. The real estate is crucial in CV, use it wisely. Keeping your CV focused and concise ensures that employers can quickly identify your strengths and suitability for the position. A very long CV will dilute the impact.
+<br />
 
-The effort you put into crafting a compelling CV will pay dividends in your job search success. Start today by reviewing your current CV against these guidelines and making the necessary improvements.
 
----
+A well-crafted CV is your passport to job opportunities. By understanding the importance of a well-structured CV, mastering the essential components, and incorporating expert tips, you can create a CV that stands out and increases your chances of success. Remember to tailor your CV to each job application, highlight relevant skills and experiences, and maintain consistency in formatting. By avoiding common CV mistakes, such as spelling errors and including irrelevant information, you can present yourself as a qualified and dedicated candidate. Good luck in your CV writing journey!
+<br /><br />
 
-*Need help crafting a standout CV? Contact Merito for professional CV writing and career coaching services.*
+<hr style={{ border: '1.5px solid #333', margin: '5px 0' }} />
