--- a/frontend/content/articles/5.mdx
+++ b/frontend/content/articles/5.mdx
@@ -4,214 +4,90 @@ image: "/Insights/Articles/5.webp"
 category: "Diversity & Inclusion"
 ---
 
-# Overcome the Hiring Biases in 2024
+<div style={{ display: 'flex', justifyContent: 'center' }}>
+  <img src="/Insights/Articles/5.webp" alt="Overcome the Hiring Biases in 2024" style={{ maxWidth: '100%', height: 'auto' }} />
+</div>
+<br />
 
-Hiring bias remains one of the most significant challenges in modern recruitment. Despite growing awareness, unconscious biases continue to influence hiring decisions, limiting diversity and hindering organizational performance. In 2024, with increased focus on DEI initiatives, it's crucial for organizations to implement effective strategies to overcome these biases.
+In the 90’s, a large Italian company was performing poorly in the market, with a fair bit of management issues. Its name was Telecom Italia.
+<br />
 
-## Understanding Hiring Biases
+Telecom Italia was looking for a CEO who could transform the culture and bring stability to the company. 
+<br />
 
-Hiring biases are preconceived notions or stereotypes that influence our judgment during the recruitment process. These biases can be conscious or unconscious and often stem from our backgrounds, experiences, and societal conditioning.
+Franco Bernabè fit the bill right away. He had led the transformation at a large company with similar issues, into a highly respected and profitable business.
+<br />
 
-### Common Types of Hiring Biases:
+Bernabè was considered so apt for his new role at Telecom Italia, that the stock price of Telecom Italia rose 5% the day his appointment was announced, i.e. a multibillion dollar increase.
+<br />
 
-#### 1. Affinity Bias
-- Tendency to favor candidates similar to ourselves
-- Often manifests in educational background or personality preferences
-- Can limit diversity and innovation
+Something changed after 2 months of Bernabè taking the reins. Telecom Italia became the target of a hostile takeover by Olivetti Corporation, a much smaller company. Bernabè had to quickly tackle this challenge to foil a takeover, a skill completely different from what he was known for i.e. leading cultural change. Olivetti succeeded in the takeover and Bernabè had to step down soon after.
+<br />
 
-#### 2. Confirmation Bias
-- Seeking information that confirms our preconceptions
-- Ignoring evidence that contradicts our initial impressions
-- Leads to rushed hiring decisions
+This case study clearly illustrates why hiring based on only previous experience is meaningless. Success in a job depends as much on capabilities that are not mentioned in a CV, as the skills and experience mentioned. More so in today’s era, where the business environment is so rapidly evolving. 
+<br />
 
-#### 3. Halo Effect
-- Allowing one positive trait to overshadow other considerations
-- Can result in overlooking serious shortcomings
-- Often occurs with charismatic candidates
+It is not because of ill-intentions that hiring goes wrong in many cases. It is mostly because of the biases we hold or purely the situation. Apart from the social biases of looks, race, demography, here are some of the biases that can lead to wrong hiring decisions.
+<br />
 
-#### 4. Horns Effect
-- Opposite of halo effect; one negative trait colors entire perception
-- Can cause qualified candidates to be dismissed prematurely
-- Often triggered by minor issues
+**Confirmation Bias:**
+It is the tendency to favour information that confirms or strengthens our beliefs or values and is difficult to dislodge once affirmed. 
 
-#### 5. Cultural Bias
-- Favoring candidates from similar cultural backgrounds
-- Can manifest in communication style preferences
-- Limits global perspectives and diverse thinking
+For example, when the interviewer likes the CV, she tries to take the interview from that perspective, overlooking the candidate's weaker points. Even reference checks need to be treated with caution for the same reason. Often, recruiters seek to confirm their evaluation of the candidate from a reference than listen in carefully to what is being said. Apart from that, reference checks are hit or miss because oftentimes the references care more about their relationship with the candidate than about helping a complete stranger to make a good hiring decision.
+<br />
 
-## The Impact of Hiring Biases
+**Anchor Bias:**<br />
+It is a tendency to believe that a new hire needs to be exactly like or exactly opposite of the person who used to do this role. Hiring managers end up looking for familiar personalities of the predecessor rather than focusing on the job’s requirements going forward. It also puts undue pressure on the new hire, not knowing what the previous personality was like. Each person is different and should be hired for their uniqueness, rather than trying to fit in a defined box.
+<br />
 
-### Organizational Consequences
-- **Reduced Diversity**: Homogeneous teams miss out on diverse perspectives
-- **Innovation Stagnation**: Lack of varied viewpoints limits creative solutions
-- **Talent Pool Limitation**: Missing qualified candidates from underrepresented groups
-- **Reputation Damage**: Perception of unfair practices affects employer brand
+**Affinity Bias:**<br />
+When we favour people who are similar to us, we promote affinity bias. Affinity bias can range from similar background, area, educational institutes to even looks or personality. This is the most pervasive bias of all. It often seems harmless as we think praising others is a good thing. What we forget is- when we praise people similar to ourselves, all we do is reinforce our own self-worth.
 
-### Individual Consequences
-- **Missed Opportunities**: Qualified candidates overlooked due to bias
-- **Demotivation**: Candidates experience discrimination and discouragement
-- **Unequal Access**: Systemic barriers prevent fair competition
+Affinity bias leads to surrounding ourselves with similar kinds of people. If left unchecked, it leads to collaboration issues when other ideas/opinions from people not similar to a group are dismissed. Or even worse, rather than stand their ground, the person with the contrary opinion keeps quiet to avoid disharmony.
+<br />
 
-## Strategies to Overcome Hiring Biases
+**Expectation overload:**<br />
+Job descriptions which are created by everyone in the company who will work with the new hire, are mythical characters like a unicorn. They lack practicality. They create a false expectation in the mind of interviewers, leading to a very long wait. Another problem such JD possesses is that the starting pool of candidates becomes very small, leading to frustration of not finding the right candidate. 
 
-### 1. Implement Structured Interview Processes
+People need to be given a chance to grow in the role; also learn and unlearn a few things.
+<br />
 
-#### Standardized Question Sets
-- Develop consistent questions for all candidates
-- Focus on job-related competencies and skills
-- Include behavioral and situational questions
-- Score responses using predefined criteria
+Here's how can you avoid these biases:
+<br />
 
-#### Panel Interviews
-- Include diverse interviewers from different backgrounds
-- Use structured scoring rubrics
-- Encourage discussion and consensus-building
-- Document decision-making rationale
+# ***1.Ask the right questions:***<br />
+Often organisations overcomplicate hiring and end up doing the extremes- either ‘Trust their gut’ or ‘turn hiring into Science’.
 
-### 2. Blind Recruitment Techniques
+Both will not yield consistent decent results. However, a systematic approach greatly improves the chances of hiring the right person all the time. And like all things great, it starts with asking the right questions. 
+<br />
 
-#### Resume Blinding
-- Remove identifying information from resumes
-- Focus on skills, experience, and achievements
-- Use software tools for automated blinding
-- Implement standardized formatting requirements
+>-> How do we tell if the new hire is a success 6 months, 1 year, 2 years down the line?<br />
+>-> Are we sure about her goals for the next 6 months? Is it a moving target?<br />
+>-> What are the personality traits she needs to have apart from skills and experience they possess? How do we evaluate them?<br />
+<br />
 
-#### Skills-Based Assessments
-- Evaluate candidates based on demonstrated abilities
-- Use work samples and practical exercises
-- Implement coding challenges or case studies
-- Focus on performance rather than credentials
+# ***2.Structured Process:***<br />
+Multiple rounds by multiple people makes it easier to view a candidate from different perspectives. Sharing and discussing notes can highlight biases and allow the team to focus on capabilities only, thus effectively using the collective wisdom within the organization.
 
-### 3. Diverse Hiring Panels
+Implementing structured interviews with preset interview questions ensures fair and transparent evolution of each candidate. Asking everyone the same questions and letting them complete the same skills tests means all candidates are measured to the same standard.
 
-#### Representation Matters
-- Ensure diverse representation on hiring committees
-- Include different genders, ethnicities, and backgrounds
-- Train panel members on unconscious bias
-- Rotate panel members for different roles
+Knowing the must-haves and good-to-haves competencies/skills in a candidate helps focusing on the right candidate rather than chasing the elusive unicorn.
+<br />
 
-#### External Perspective
-- Include stakeholders from different departments
-- Consider third-party consultants for critical roles
-- Use diverse interview panels for consistency
+# ***3.Training:***<br />
+Hiring is a key function for growth organizations. All key stakeholders are involved in hiring. And yet there is no training or even basic guidelines around the process in most organizations. 
 
-### 4. Technology and AI Solutions
+Training people to understand biases makes them more aware. Once you have awareness, you can implement processes to resolve the issue. How to interview, how to evaluate and how to write feedback-all these aspects should be covered in a formal training.
+<br />
 
-#### AI-Powered Bias Detection
-- Use tools that flag potentially biased language in job descriptions
-- Implement AI screening that focuses on skills and experience
-- Monitor AI algorithms for bias in training data
-- Combine AI with human oversight
+# ***4.Test for EQ:***<br />
+In his book, Working with Emotional Intelligence, Daniel Goleman mentions that for very senior leaders, close to 90% of success could be attributed to emotional intelligence competencies. Psychometric tests are an excellent tool to measure and analyze the important aspects of personality and behavior; that are instrumental in determining the emotional quotient of an individual.
+<br />
 
-#### Automated Screening Tools
-- Implement applicant tracking systems with bias checks
-- Use video interviewing platforms with standardized questions
-- Leverage assessment tools that measure job-related competencies
+Even during the whole interview process, keep an eye out for the traits that are crucial for the role and for your organization. They could be any one or all of the 5 components of emotional intelligence: self-awareness, self-regulation, motivation, empathy, and social skills.
+<br />
 
-### 5. Training and Awareness Programs
+Knowing when to seek help in hiring is also an important step. Hiring can be done in-house for roles which have a talent pool within the organization or the usual roles which you’re hiring for the 100th time. However, for high-level roles or a new role in the organization which also has an impact on the bottom line, companies should seek external help. Also for new markets, diversity & joint ventures, external help for hiring works out better in terms of RoI.
+<br /><br />
 
-#### Unconscious Bias Training
-- Regular training sessions for hiring managers
-- Interactive workshops and role-playing exercises
-- Real-world scenarios and case studies
-- Ongoing reinforcement and refreshers
-
-#### Cultural Competency Development
-- Training on different communication styles
-- Understanding various cultural norms and expectations
-- Developing empathy and perspective-taking skills
-- Building cross-cultural collaboration skills
-
-### 6. Inclusive Job Descriptions
-
-#### Bias-Free Language
-- Use gender-neutral language
-- Avoid unnecessary requirements (e.g., "rockstar" candidates)
-- Focus on essential qualifications and responsibilities
-- Include diversity statements and commitments
-
-#### Broad Appeal
-- Write descriptions that attract diverse candidates
-- Highlight inclusive company culture
-- Emphasize growth opportunities and work-life balance
-- Use diverse imagery in job postings
-
-## Measuring and Monitoring Progress
-
-### Key Metrics to Track
-- **Diversity Hiring Rates**: Track representation across different demographics
-- **Time-to-Hire**: Monitor if structured processes affect hiring speed
-- **Candidate Experience**: Survey candidates on perceived fairness
-- **Retention Rates**: Compare retention across different demographic groups
-
-### Regular Audits
-- Conduct annual bias audits of hiring processes
-- Review job descriptions for biased language
-- Analyze hiring data for patterns and disparities
-- Implement corrective actions based on findings
-
-## Legal and Ethical Considerations
-
-### Compliance Requirements
-- Understand local anti-discrimination laws
-- Implement required accommodations for candidates
-- Document hiring decisions for legal protection
-- Maintain confidentiality throughout the process
-
-### Ethical Hiring Practices
-- Treat all candidates with respect and fairness
-- Provide timely and constructive feedback
-- Maintain transparency in the process
-- Continuously improve based on feedback
-
-## Building a Bias-Free Culture
-
-### Leadership Commitment
-- Demonstrate commitment from top leadership
-- Include DEI goals in performance objectives
-- Allocate resources for bias reduction initiatives
-- Celebrate diversity and inclusion successes
-
-### Employee Involvement
-- Create employee resource groups (ERGs)
-- Encourage reporting of biased behavior
-- Foster inclusive workplace policies
-- Recognize and reward inclusive behaviors
-
-## Case Studies and Success Stories
-
-### Tech Industry Leaders
-- **Google's unconscious bias training**: Comprehensive programs showing measurable improvements
-- **Microsoft's diverse hiring initiatives**: Specific targets and accountability measures
-- **Salesforce's equality assessments**: Regular audits and transparency reports
-
-### Traditional Companies Transforming
-- **Unilever's inclusive recruitment**: Focus on skills over traditional qualifications
-- **Accenture's diversity hiring goals**: Specific targets with executive accountability
-- **PwC's blind recruitment pilot**: Successful implementation showing improved diversity
-
-## Future Trends in Bias-Free Hiring
-
-### Emerging Technologies
-- **AI bias detection and correction**
-- **Virtual reality assessments**
-- **Blockchain-based credential verification**
-- **Predictive analytics for candidate success**
-
-### Evolving Best Practices
-- **Skills-based hiring expansion**
-- **Remote and global hiring normalization**
-- **Continuous feedback and improvement**
-- **Integration of DEI into core business strategy**
-
-## Conclusion
-
-Overcoming hiring biases requires commitment, awareness, and systematic implementation of best practices. While challenging, the benefits of diverse and inclusive hiring far outweigh the effort required. Organizations that successfully address biases will not only comply with evolving expectations but also gain competitive advantages through improved innovation, better decision-making, and enhanced reputation.
-
-The journey toward bias-free hiring is ongoing, requiring continuous learning, adaptation, and commitment. By implementing these strategies and regularly measuring progress, organizations can create more equitable hiring processes that attract and retain the best talent from all backgrounds.
-
-Remember, diversity is not just a moral imperative—it's a business necessity in today's global marketplace.
-
----
-
-*Ready to eliminate hiring biases in your organization? Contact Merito for comprehensive DEI consulting and bias-free hiring solutions.*
+<hr style={{ border: '1.5px solid #333', margin: '5px 0' }} />
