--- a/frontend/content/articles/7.mdx
+++ b/frontend/content/articles/7.mdx
@@ -4,165 +4,75 @@ image: "/Insights/Articles/7.webp"
 category: "Recruitment Strategy"
 ---
 
-# Acing Recruitment Irrespective of Who Drives the Market
+<div style={{ display: 'flex', justifyContent: 'center' }}>
+  <img src="/Insights/Articles/7.webp" alt="Acing Recruitment Irrespective of Who Drives the Market" style={{ maxWidth: '100%', height: 'auto' }} />
+</div>
+<br />
 
-The recruitment landscape is constantly evolving, shifting between candidate-driven and employer-driven markets. Successful organizations understand that effective recruitment requires adaptability and strategic thinking regardless of market conditions. This comprehensive guide explores strategies to excel in recruitment across all market scenarios.
+We like to categorize things for better understanding of our surroundings or markets. Candidate driven versus employer driven job market is one such phenomena. Candidate driven market is when job openings are plentiful and available talent is scarce, also known as tight labour market. Its an employer driven market or slack market when the opposite is true. Many talk about these markets as if one can strike gold with certain strategies, but let’s be honest- beyond tighter salary negotiations, nothing much changes when the market changes in this day and age. To add to that, the kind of roles that are available in market are so diverse that it’s almost impossible to fit the whole of job market into these two buckets. An employer driven investment banking job market can very comfortably coexist with a candidate driven tech job market.
+<br />
 
-## Understanding Market Dynamics
+There’s another phenomena called ghost posting or phantom jobs. These are the job postings which do not have a real job opening. Sometimes employers post them just to build a funnel or to analyse the market. Sometimes they are the positions which are closed, but employers haven’t taken them down. Not only ghost jobs give a fake sense of job market, if posted regularly they can bring down the credibility of the employer. 
+<br />
 
-### Candidate-Driven Market
-- **Characteristics**: Low unemployment, high competition for talent
-- **Challenges**: Difficulty attracting qualified candidates, higher compensation demands
-- **Opportunities**: Access to diverse talent pools, focus on culture fit
+The fundamentals of sourcing, weeding out irrelevant profiles, reach outs, interviewing and negotiations remain the same. Like they say in investing, there’s no right or wrong market. If your fundamentals are right, you shall reap returns. How do employers make sure they remain on track irrespective of market condition?
+<br />
 
-### Employer-Driven Market
-- **Characteristics**: High unemployment, abundant qualified candidates
-- **Challenges**: Standing out from competitors, managing high application volumes
-- **Opportunities**: More selective hiring, potentially lower costs
+**The holy grail of ‘recruiting funnel’**<br />
+Contrary to sales funnel, the recruiting funnel doesn’t have to be huge. Higher the number of applicants, longer it takes for the recruiting team to shortlist the right ones. Yes, there are tools to do that, but ask any recruiter how much time they spend at the top of the funnel and you’ll know. The goal instead should be to get ‘qualified candidates’ at top of the funnel. For this your company needs to attract candidates, at the same time dissuade all from applying. Knowing which job portal to use for which kind of role and gamification of screening or prescreening test which do not cost an arm and a leg are ideal to have a healthy top of the funnel.
+<br />
 
-### Hybrid Scenarios
-- **Regional Variations**: Different market conditions across geographies
-- **Skill-Specific Markets**: Some roles remain candidate-driven while others are employer-driven
-- **Industry Fluctuations**: Market conditions vary by sector
+**Weigh in active vs passive candidates**<br />
+Active candidates are readily available as they apply to the job post, make themselves available for interviews and show active interest. On the flip side, with ease of job application process, they have many interviews going on simultaneously and they may go offer shopping after reaching final round. Passive candidates, on the other hand, may not have real reason to shift and only incentive for them becomes ‘money’. They may also increase the rate of ‘no-show’ or ‘offer decline’, since they never had interest in switching jobs.
+<br />
 
-## Core Principles for All Markets
+**Tight Interview Process**<br />
+Our advise is to follow 3B’s:
 
-### Build a Strong Employer Brand
-Regardless of market conditions, employer brand is crucial:
-- **Consistent Messaging**: Maintain clear value proposition across all channels
-- **Employee Advocacy**: Leverage current employees as brand ambassadors
-- **Authentic Storytelling**: Share genuine stories of employee experiences
-- **Digital Presence**: Optimize online profiles and career pages
+# ***Back Calculate:*** Avoid cliches like ‘We wanted the person to join yesterday’. Be logical and decide when you want someone to start and set a reverse timeline, considering notice periods, number of interviews, availability, holidays & leaves of people involved.
+# ***Brisk work:*** Don’t fall for the ‘Aur Dikhao’ trap. If you find a good fit, initiate the process, take interviews & make a decision as soon as possible. As per the paradox of choice, if you interview too many candidates, you may get overwhelmed and end up delaying the whole process.
+# ***Be humane:*** Recruitment process is high on human touch. Build trust, sell the job, check in on candidates, provide context and enough information about the recruitment process. Keep the channel of communication open.
+<br />
 
-### Invest in Candidate Experience
-Exceptional candidate experience pays dividends in all markets:
-- **Transparent Processes**: Clear communication throughout the recruitment journey
-- **Respectful Treatment**: Treat candidates as potential future colleagues
-- **Timely Feedback**: Provide prompt responses and constructive feedback
-- **Technology Integration**: Use modern tools to enhance the experience
+**Keep track of numbers**<br />
+“You can't improve what you don't measure.” Make note of recruitment metrics that you want to track to ensure efficient hiring process. Again, this would vary according to sector and seniority, so ideally you should track this separately for each role and then arrive at your ideal number. Some of the most important metrics are:
 
-## Strategies for Candidate-Driven Markets
+# ***Cost of hire:*** Aim should be to lower the cost of hiring. Include costs like salaries, admin overhead, tools, job portals, external agency, interviews cost, compliances cost and others.
+<div style={{ display: 'flex', justifyContent: 'center' }}>
+  <img src="/Insights/Articles/7.11.png" alt="Acing Recruitment Irrespective of Who Drives the Market" style={{ maxWidth: '100%', height: 'auto' }} />
+</div>
+<br />
 
-### Enhanced Compensation Packages
-- **Competitive Base Salary**: Research and match market rates
-- **Comprehensive Benefits**: Include health, retirement, and wellness benefits
-- **Equity Opportunities**: Offer stock options or profit-sharing
-- **Performance Bonuses**: Tie rewards to individual and company success
+# ***Time to hire:*** Shorter the time to hire, better is the candidate experience and of course your costs.
+<div style={{ display: 'flex', justifyContent: 'center' }}>
+  <img src="/Insights/Articles/7.12.png" alt="Acing Recruitment Irrespective of Who Drives the Market" style={{ maxWidth: '100%', height: 'auto' }} />
+</div>
+<br />
 
-### Accelerated Recruitment Process
-- **Streamlined Application**: Simplify and shorten application forms
-- **Quick Response Times**: Respond to applications within 24-48 hours
-- **Efficient Interview Process**: Minimize rounds while maintaining quality
-- **Offer Speed**: Make competitive offers quickly to secure top talent
+# ***Source efficiency:*** If you’re using an ATS, you would know your sources of hire. It usually shows a pie chart of how many applicants are there from different job boards/career site/referrals. Finding out source efficiency will help you allocate your resources effectively.
+<div style={{ display: 'flex', justifyContent: 'center' }}>
+  <img src="/Insights/Articles/7.13.png" alt="Acing Recruitment Irrespective of Who Drives the Market" style={{ maxWidth: '100%', height: 'auto' }} />
+</div>
+<br />
 
-### Focus on Company Culture
-- **Culture Marketing**: Highlight unique company values and work environment
-- **Employee Testimonials**: Share authentic stories from current employees
-- **Work-Life Balance**: Emphasize flexibility and well-being initiatives
-- **Growth Opportunities**: Showcase career development and learning programs
+# ***Applicant to hire ratio:*** This ratio is typically useful to reverse calculate how many candidates you need at the top of the funnel to close this position. It is extremely useful for the bulk entry level roles. Again, having this ratio ready for your usual open positions will help you find out the blockers.
+<div style={{ display: 'flex', justifyContent: 'center' }}>
+  <img src="/Insights/Articles/7.14.png" alt="Acing Recruitment Irrespective of Who Drives the Market" style={{ maxWidth: '100%', height: 'auto' }} />
+</div>
+<br />
 
-## Strategies for Employer-Driven Markets
+# ***Interview to hire ratio:*** Since interviewing the the most resource intensive activity, this ratio helps in evaluating your interviewing process as well as quality of candidates going for interviews.
+<div style={{ display: 'flex', justifyContent: 'center' }}>
+  <img src="/Insights/Articles/7.15.png" alt="Acing Recruitment Irrespective of Who Drives the Market" style={{ maxWidth: '100%', height: 'auto' }} />
+</div>
+<br />
+<br />
 
-### Rigorous Screening Processes
-- **Skills Assessment**: Implement comprehensive skills testing
-- **Behavioral Interviews**: Focus on past performance and problem-solving
-- **Reference Checks**: Thorough background and reference verification
-- **Cultural Fit Evaluation**: Assess alignment with company values
+**The way forward**<br />
+The rate at which companies hire today is unprecedented. With huge mandate, comes the choice overload of new-age AI tools to help with hiring & ever changing technology. Recruiters are bound to be overwhelmed. In fact, we go a step further and advise our clients to recognize the strengths & weaknesses of such tools and adapt only what’s absolutely necessary. 
+<br />
 
-### Volume Management
-- **Applicant Tracking Systems**: Automate initial screening and communication
-- **Standardized Processes**: Create consistent evaluation criteria
-- **Bulk Communication**: Use templates for efficient candidate updates
-- **Data-Driven Decisions**: Track metrics to optimize the process
+Embrace the new, but also stick to the basics and measure your hiring success by following the candidate’s journey till they leave the company. It’s impossible to be better at hiring if you cannot tell how the hires turned out as employees. So tracking the employee lifecycle right from when they enter your recruitment funnel as candidate till they leave as employee is as critical for hiring as it is for other employee engagement initiatives. And this is where HRtech plays an important role. Organizations which have mastered this or atleast taking steps in this direction, will be the ones leading the modern day business.
+<br /><br />
 
-### Talent Pipeline Development
-- **Campus Recruitment**: Build relationships with educational institutions
-- **Internal Referrals**: Encourage employee referral programs
-- **Alumni Networks**: Maintain connections with former employees
-- **Continuous Sourcing**: Build talent pools for future needs
-
-## Universal Recruitment Tactics
-
-### Technology Integration
-- **AI-Powered Tools**: Use AI for resume screening and candidate matching
-- **Video Interviewing**: Enable remote interviewing capabilities
-- **Assessment Platforms**: Implement skills and personality assessments
-- **Analytics Dashboards**: Track recruitment metrics and effectiveness
-
-### Data-Driven Recruitment
-- **Performance Metrics**: Track time-to-hire, quality-of-hire, and retention rates
-- **Candidate Analytics**: Analyze application and interview data
-- **Market Intelligence**: Monitor salary trends and competitor practices
-- **ROI Measurement**: Calculate recruitment effectiveness and costs
-
-### Diversity and Inclusion Focus
-- **Inclusive Job Descriptions**: Use bias-free language and requirements
-- **Diverse Sourcing**: Target underrepresented talent pools
-- **Unconscious Bias Training**: Train recruiters on bias recognition
-- **Inclusive Processes**: Ensure fair evaluation for all candidates
-
-## Building Organizational Resilience
-
-### Adaptable Recruitment Framework
-- **Flexible Policies**: Create policies that work across market conditions
-- **Scalable Processes**: Design systems that can handle varying volumes
-- **Continuous Learning**: Regularly update recruitment strategies
-- **Cross-Training**: Ensure multiple team members can handle key processes
-
-### Talent Strategy Integration
-- **Workforce Planning**: Align recruitment with long-term business goals
-- **Skills Mapping**: Identify critical skills for future success
-- **Succession Planning**: Prepare for leadership and key role transitions
-- **Employer Branding**: Maintain consistent brand messaging year-round
-
-## Measuring Recruitment Success
-
-### Key Performance Indicators
-- **Time-to-Fill**: Average time from job posting to offer acceptance
-- **Quality-of-Hire**: Performance ratings and retention of new hires
-- **Cost-per-Hire**: Total recruitment costs divided by number of hires
-- **Diversity Metrics**: Representation across different demographics
-
-### Candidate Experience Metrics
-- **Application Completion Rate**: Percentage of started applications completed
-- **Interview-to-Offer Ratio**: Conversion rate from interview to offer
-- **Offer Acceptance Rate**: Percentage of offers accepted
-- **Candidate Satisfaction**: Post-process feedback scores
-
-## Case Studies and Examples
-
-### Tech Industry Adaptability
-- **Google's Approach**: Maintains strong employer brand across market cycles
-- **Netflix's Culture Focus**: Emphasizes freedom and responsibility regardless of market
-- **Amazon's Scale**: Handles massive recruitment volumes efficiently
-
-### Traditional Industries Transforming
-- **Manufacturing Sector**: Uses apprenticeships and training programs
-- **Healthcare Organizations**: Focuses on mission-driven recruitment
-- **Financial Services**: Emphasizes stability and growth opportunities
-
-## Future Trends in Recruitment
-
-### Emerging Technologies
-- **AI and Machine Learning**: Predictive analytics for candidate success
-- **Virtual Reality**: Immersive job previews and assessments
-- **Blockchain Credentials**: Verified digital skill certifications
-- **Remote Work Tools**: Enhanced virtual collaboration platforms
-
-### Evolving Best Practices
-- **Skills-Based Hiring**: Focus on competencies over traditional qualifications
-- **Continuous Recruitment**: Always-on sourcing and engagement
-- **Personalized Experiences**: Tailored recruitment journeys
-- **Sustainability Focus**: ESG considerations in employer branding
-
-## Conclusion
-
-Successful recruitment in any market requires a strategic, adaptable approach that prioritizes employer branding, candidate experience, and data-driven decision-making. Organizations that build resilient recruitment frameworks and maintain consistent quality regardless of market conditions will consistently attract and retain top talent.
-
-The key to acing recruitment irrespective of market conditions lies in understanding that while tactics may vary, the fundamental principles of respect, transparency, and value creation remain constant. By focusing on these core elements and remaining adaptable to changing conditions, organizations can build recruitment processes that deliver consistent results.
-
-Remember, the best time to strengthen your recruitment capabilities is before you need them. Invest in your processes, technology, and people regularly to ensure you're always prepared for whatever the market brings.
-
----
-
-*Want to optimize your recruitment strategy for any market condition? Contact Merito for comprehensive recruitment consulting and solutions.*
+<hr style={{ border: '1.5px solid #333', margin: '5px 0' }} />
